# OneMax

./: CMakeLists.txt  README.md  main.cpp  one_plus_lambda.cpp  one_plus_lambda.h  one_plus_lambda.txt  one_plus_lambda_fast.cpp  one_plus_lambda_fast.h  one_plus_lambda_fast.txt  one_plus_lambda_fast_(big).txt  one_plus_lambda_learning.cpp  one_plus_lambda_learning.h  one_plus_lambda_learning.txt  one_plus_lambda_tuning.cpp  one_plus_lambda_tuning.h  one_plus_lambda_tuning.txt  one_plus_lambda_tuning_fast.cpp  one_plus_lambda_tuning_fast.h  one_plus_lambda_tuning_fast.txt  one_plus_lambda_tuning_fast_(big).txt  onepluslambda.cpp  onepluslambda.h  onepluslambdatuning.cpp  onepluslambdatuning.h
Q_learning_states/: all.txt
Q_learning_states/lambda_is_100/: n_is_10000.txt  n_is_100000.txt  n_is_20000.txt  n_is_30000.txt  n_is_40000.txt  n_is_50000.txt  n_is_60000.txt  n_is_70000.txt  n_is_80000.txt  n_is_90000.txt
Q_learning_states/lambda_is_1600/: n_is_10000.txt  n_is_100000.txt  n_is_20000.txt  n_is_30000.txt  n_is_40000.txt  n_is_50000.txt  n_is_60000.txt  n_is_70000.txt  n_is_80000.txt  n_is_90000.txt
Q_learning_states/lambda_is_400/: n_is_10000.txt  n_is_100000.txt  n_is_20000.txt  n_is_30000.txt  n_is_40000.txt  n_is_50000.txt  n_is_60000.txt  n_is_70000.txt  n_is_80000.txt  n_is_90000.txt
